gst-libs/gst/vaapi/gstvaapiencoder_h265.c
@@ -2034,7 +2034,7 @@ reset_properties (GstVaapiEncoderH265 * encoder)
     encoder->cts_offset = gst_util_uint64_scale (GST_SECOND,
         GST_VAAPI_ENCODER_FPS_D (encoder), GST_VAAPI_ENCODER_FPS_N (encoder));
   else
-    encoder->cts_offset = GST_CLOCK_TIME_NONE;
+    encoder->cts_offset = 0;
 
   /* init max_poc */
   encoder->log2_max_pic_order_cnt =
